--- a/project-web-app/src/app/connect/connect.component.html
+++ b/project-web-app/src/app/connect/connect.component.html
@@ -1,18 +1,17 @@
 <div class="login-container">
-    <form class="login-form">
-      <h2>Login</h2>
-      
-      <div class="input-group">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
-      </div>
-      
-      <div class="input-group">
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-      </div>
-      
-      <button type="submit">Login</button>
-    </form>
-  </div>
-  
+  <form class="login-form" #loginForm="ngForm" (ngSubmit)="login(loginForm)">
+    <h2>Login</h2>
+
+    <div class="input-group">
+      <label for="username">Username:</label>
+      <input type="text" id="username" name="username" required [(ngModel)]="username">
+    </div>
+
+    <div class="input-group">
+      <label for="password">Password:</label>
+      <input type="password" id="password" name="password" required [(ngModel)]="password">
+    </div>
+
+    <button type="submit">Login</button>
+  </form>
+</div>
