--- a/project-web-app/src/app/welcome-page/welcome-page.component.html
+++ b/project-web-app/src/app/welcome-page/welcome-page.component.html
@@ -1,26 +1,26 @@
 <div class="welcome-container">
-    <h1>Welcome to CryptoHarbor!</h1>
+    <h1>Welcome to <span>CryptoHarbor</span>!</h1>
     <p>Embark on a journey into the world of cryptocurrencies with CryptoHarbor!</p>
     <div class="features">
         <div class="feature-item">
+            <img src="https://cdn-icons-png.flaticon.com/512/3528/3528158.png" alt="Real-time Market Data">
             <h3>Real-time Market Data</h3>
-            <p>Stay updated with live market data, including prices, trends, and trading volumes.</p>
         </div>
         <div class="feature-item">
+            <img src="https://cdn-icons-png.flaticon.com/512/849/849987.png" alt="Advanced Analytics">
             <h3>Advanced Analytics</h3>
-            <p>Utilize advanced analytics tools to make informed decisions and maximize your returns.</p>
         </div>
         <div class="feature-item">
+            <img src="https://cdn-icons-png.flaticon.com/512/2853/2853434.png" alt="News and Updates">
             <h3>News and Updates</h3>
-            <p>Stay informed with the latest news and updates from the cryptocurrency world to make well-timed decisions.</p>
         </div>
         <div class="feature-item">
+            <img src="https://cdn-icons-png.flaticon.com/512/9767/9767128.png" alt="Secure Transactions">
             <h3>Secure Transactions</h3>
-            <p>Experience secure and reliable cryptocurrency transactions with our robust encryption and authentication measures.</p>
         </div>
         <div class="feature-item">
+            <img src="https://cdn-icons-png.flaticon.com/512/5247/5247455.png" alt="Community Forum">
             <h3>Community Forum</h3>
-            <p>Connect with other cryptocurrency enthusiasts, share insights, and discuss market trends in our community forum.</p>
         </div>
     </div>
     <button (click)="goToConnectPage()">Connect</button>
