--- a/project-web-app/src/app/connect/connect.component.css
+++ b/project-web-app/src/app/connect/connect.component.css
@@ -1,54 +1,85 @@
 .login-container {
-    background-color: rgba(44, 44, 44, 0.8);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    overflow: hidden;
-    max-width: 400px;
-    margin: auto;
-    margin-top: 40px;
-    margin-bottom: 40px;
-  }
-  
-  
-  .login-form {
-    padding: 20px;
-  }
-  
-  .login-form h2 {
-    text-align: center;
-    color: #ffffff;
-  }
-  
-  .input-group {
-    margin-bottom: 15px;
-  }
-  
-  .label {
-    display: block;
-    margin-bottom: 8px;
-  }
+  background-color: rgba(44, 44, 44, 0.8);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  overflow: hidden;
+  max-width: 400px;
+  margin: auto;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  position: relative;
+}
 
-  label{
-    color: white;
-  }
-  
-  input {
-    width: 100%;
-    padding: 10px;
-    box-sizing: border-box;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  button {
-    background-color: #4caf50;
-    color: #fff;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #45a049;
-  }
+.login-form {
+  padding: 20px;
+}
+
+.login-form h2 {
+  text-align: center;
+  color: #ffffff;
+}
+
+.input-group {
+  margin-bottom: 15px;
+}
+
+.label {
+  display: block;
+  margin-bottom: 8px;
+}
+
+label {
+  color: white;
+  display: block;
+}
+
+input {
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  transition: border-color 0.3s ease;
+}
+
+input:focus {
+  border-color: rgb(0 126 255);
+}
+
+button {
+  background-color: rgb(0 126 255);
+  color: #fff;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 30px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: rgb(0, 208, 255);
+}
+
+.options {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 15px;
+}
+
+.forgot-password,
+.no-account {
+  color: #fff;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.forgot-password:hover,
+.no-account:hover {
+  color: rgb(0, 187, 255);
+}
+
+.divider {
+  margin: 0 10px;
+  color: #ccc;
+}
