modified project title

--- a/project-web-app/src/app/app.component.html
+++ b/project-web-app/src/app/app.component.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="container">
     <div class="header__logo">
-      <h1 class="header__logo__name" (click)="goToHomePage()">CryptoHarbor</h1>
+      <h1 class="header__logo__name" (click)="goToHomePage()">CryptoBreak</h1>
     </div>
     <nav class="header__nav">
       <ul class="header__menu">
@@ -25,7 +25,7 @@
   <div class="container">
     <div class="row">
       <div class="footer-col">
-        <h4>company</h4>
+        <h4>CryptoBreak</h4>
         <ul>
           <li><a href="#">about us</a></li>
           <li><a href="#">our services</a></li>
