--- a/project-web-app/src/app/welcome-page/welcome-page.component.html
+++ b/project-web-app/src/app/welcome-page/welcome-page.component.html
@@ -1,27 +1,44 @@
 <div class="welcome-container">
-    <h1>Welcome to <span>CryptoHarbor</span>!</h1>
-    <p>Embark on a journey into the world of cryptocurrencies with CryptoHarbor!</p>
-    <div class="features">
-        <div class="feature-item">
-            <img src="https://cdn-icons-png.flaticon.com/512/3528/3528158.png" alt="Real-time Market Data">
-            <h3>Real-time Market Data</h3>
-        </div>
-        <div class="feature-item">
-            <img src="https://cdn-icons-png.flaticon.com/512/849/849987.png" alt="Advanced Analytics">
-            <h3>Advanced Analytics</h3>
-        </div>
-        <div class="feature-item">
-            <img src="https://cdn-icons-png.flaticon.com/512/2853/2853434.png" alt="News and Updates">
-            <h3>News and Updates</h3>
-        </div>
-        <div class="feature-item">
-            <img src="https://cdn-icons-png.flaticon.com/512/9767/9767128.png" alt="Secure Transactions">
-            <h3>Secure Transactions</h3>
-        </div>
-        <div class="feature-item">
-            <img src="https://cdn-icons-png.flaticon.com/512/5247/5247455.png" alt="Community Forum">
-            <h3>Community Forum</h3>
-        </div>
+  <h1>Welcome to <span>CryptoBreak </span>!</h1>
+  <p>
+    Embark on a journey into the world of cryptocurrencies with CryptoHarbor!
+  </p>
+  <div class="features">
+    <div class="feature-item">
+      <img
+        src="https://cdn-icons-png.flaticon.com/512/3528/3528158.png"
+        alt="Real-time Market Data"
+      />
+      <h3>Real-time Market Data</h3>
     </div>
-    <button (click)="goToConnectPage()">Connect</button>
+    <div class="feature-item">
+      <img
+        src="https://cdn-icons-png.flaticon.com/512/849/849987.png"
+        alt="Advanced Analytics"
+      />
+      <h3>Advanced Analytics</h3>
+    </div>
+    <div class="feature-item">
+      <img
+        src="https://cdn-icons-png.flaticon.com/512/2853/2853434.png"
+        alt="News and Updates"
+      />
+      <h3>News and Updates</h3>
+    </div>
+    <div class="feature-item">
+      <img
+        src="https://cdn-icons-png.flaticon.com/512/9767/9767128.png"
+        alt="Secure Transactions"
+      />
+      <h3>Secure Transactions</h3>
+    </div>
+    <div class="feature-item">
+      <img
+        src="https://cdn-icons-png.flaticon.com/512/5247/5247455.png"
+        alt="Community Forum"
+      />
+      <h3>Community Forum</h3>
+    </div>
+  </div>
+  <button (click)="goToConnectPage()">Connect</button>
 </div>
