first api connection and data extraction succeeded

--- a/project-web-app/src/app/app.component.html
+++ b/project-web-app/src/app/app.component.html
@@ -5,7 +5,10 @@
     </div>
     <nav class="header__nav">
       <ul class="header__menu">
-        <li class="header__item"><a (click)="goToHomePage()">General</a></li>
+        <li class="header__item"><a (click)="goToHomePage()">Home</a></li>
+        <li class="header__item">
+          <a (click)="goToCryptoCurrencyListPage()">Crypto-Center</a>
+        </li>
         <li class="header__item"><a (click)="goToAboutPage()">about</a></li>
         <li class="header__item"><a (click)="goToContactPage()">contact</a></li>
       </ul>
