fetched some informations for detail section in the crypto page

--- a/project-web-app/src/app/cryptomonnaies-list/cryptomonnaies-list.component.css
+++ b/project-web-app/src/app/cryptomonnaies-list/cryptomonnaies-list.component.css
@@ -2,6 +2,13 @@ h1 {
   color: white;
 }
 
+h2 {
+  color: rgb(195, 195, 195);
+}
+p {
+  color: white;
+}
+
 th {
   background: #2e2e2e;
   color: white;
