--- a/project-web-app/src/app/welcome-page/welcome-page.component.html
+++ b/project-web-app/src/app/welcome-page/welcome-page.component.html
@@ -40,5 +40,5 @@
       <h3>Community Forum</h3>
     </div>
   </div>
-  <button (click)="goToConnectPage()">Connect</button>
+  <button (click)="goToConnectPage()">Naviguer...</button>
 </div>
