--- a/project-web-app/src/app/cryptomonnaies-list/cryptomonnaies-list.component.css
+++ b/project-web-app/src/app/cryptomonnaies-list/cryptomonnaies-list.component.css
@@ -46,3 +46,34 @@ td {
   flex: 1;
   padding: 20px;
 }
+
+button {
+  background-color: rgb(0, 126, 255);
+  border: none;
+  color: #fff;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+button:hover {
+  background-color: rgb(0, 242, 186);
+  color: black;
+  transition: 0.5s;
+}
+
+.my_table button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+div.mat-mdc-paginator-range-actions {
+  color: white;
+}
