--- a/project-web-app/src/app/app.component.html
+++ b/project-web-app/src/app/app.component.html
@@ -9,6 +9,9 @@
         <li class="header__item">
           <a (click)="goToCryptoCurrencyListPage()">Crypto-Center</a>
         </li>
+        <li class="header__item">
+          <a (click)="goToNewsPage()">News/Updates</a>
+        </li>
         <li class="header__item"><a (click)="goToAboutPage()">about</a></li>
         <li class="header__item"><a (click)="goToContactPage()">contact</a></li>
       </ul>
