--- a/project-web-app/src/app/news-list/news-list.component.html
+++ b/project-web-app/src/app/news-list/news-list.component.html
@@ -1,1 +1,22 @@
-<p>news-list works!</p>
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Description</th>
+      <th>Contenu</th>
+      <th>Date de publication</th>
+      <th>image</th>
+      <th>Source</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let news of newsData">
+      <td>{{ news.title }}</td>
+      <td>{{ news.description }}</td>
+      <td>{{ news.content }}</td>
+      <td>{{ news.pubDate }}</td>
+      <td>{{ news.image_url }}</td>
+      <td>{{ news.source_id }}</td>
+    </tr>
+  </tbody>
+</table>
