--- a/project-web-app/src/app/news-list/news-list.component.css
+++ b/project-web-app/src/app/news-list/news-list.component.css
@@ -72,7 +72,7 @@ h1 {
 .content .title {
   text-align: justify;
   font-size: 25px;
-  font-weight: 500;
+  font-weight: bold;
   color: var(--text);
 }
 
