--- a/project-web-app/src/app/cryptomonnaie-detail/cryptomonnaie-detail.component.html
+++ b/project-web-app/src/app/cryptomonnaie-detail/cryptomonnaie-detail.component.html
@@ -2,23 +2,25 @@
   <div class="row">
     <div class="col-md-3 details">
       <div class="img">
-        <img [src]="coinData?.image?.large" alt="" />
+        <img [src]="coinInformation?.image?.large" alt="" />
         <h3 class="text-center" style="font-size: 23px">
-          {{ coinData?.name }}
+          {{ coinInformation?.name }}
         </h3>
-        <h2 [innerHtml]="coinData?.description?.en.split('. ')[0]"></h2>
+        <h2 [innerHtml]="coinInformation?.description?.en.split('. ')[0]"></h2>
         <div class="more-detail">
           <span class="title">Rank: </span>
-          <span class="value">{{ coinData?.market_cap_rank }}</span
+          <span class="value">{{ coinInformation?.market_cap_rank }}</span
           ><br />
           <span class="title">Current Price: </span>
           <span class="value">{{
-            coinData?.market_data.current_price.inr | currency : currency
+            coinInformation?.market_data.current_price.eur
+              | currency : chosenCurrency
           }}</span
           ><br />
           <span class="title">Market Cap: </span>
           <span class="value">{{
-            coinData?.market_data.market_cap.inr | currency : currency
+            coinInformation?.market_data.market_cap.eur
+              | currency : chosenCurrency
           }}</span>
         </div>
       </div>
